fix(kit): `InputRange` with `size` = `m`/`s` has unexpected shift for `[content]` (#12857)

--- a/projects/kit/components/input-range/input-range.style.less
+++ b/projects/kit/components/input-range/input-range.style.less
@@ -37,3 +37,7 @@ tui-range {
 tui-textfield::ng-deep [tuiButtonX] {
     display: none !important;
 }
+
+tui-textfield::ng-deep .t-content {
+    margin-inline-end: 0;
+}
